test/modules/errors/duplicateModules2.compopts
duplicateModules.chpl --main-module M
